<resources>
    <string name="app_name" translatable="false">NokiaHslVisualisation</string>

    // Fragment titles
    <string name="menu_home">HSL Alerts</string>
    <string name="menu_traffic_list">Traffic list view</string>
    <string name="menu_map">Map</string>
    <string name="details_view">Traffic details</string>
    <string name="alert_details_view">Alert details</string>
    <string name="menu_ar">Augmented reality view</string>

    // Traffic list view
    <string name="toast_api_key">To use traffic data, you need HERE maps API key. You can sign up for it in https://developer.here.com/tutorials/getting-here-credentials/</string>
    <string name="add_api_key_button">Add key</string>
    <string name="api_key_edit_text_hint">API key here</string>
    <string name="api_key_link_button_text">LINK</string>

    // Content descriptions
    <string name="warning_icon_content_description">Warning icon</string>

    // Traffic list adapter
    <string name="warning_description">Start: %1$s, End: %2$s, Type: %3$s</string>
    <string name="bus_icon_content_description">Bus Icon</string>
    <string name="alert_icon_content_description">Alert Icon</string>

    // Traffic details
    <string name="traffic_time">Criticality: %1$s Start: %2$s End: %3$s</string>

    // Home fragment
    <string name="btn_alerts">Show Alerts</string>
    <string name="btn_start_mqtt">Get MQTT</string>
    <string name="btn_stop_mqtt">Stop MQTT</string>


    <string name="mapbox_access_token" translatable="false">pk.eyJ1IjoiZGVkYXNzZSIsImEiOiJja21sejhvbW4wMm9oMnZwZWxlNjZ3Y2Q2In0.lvdWT_LNNIlwM-AxY0m7UA</string>
    <string name="search">Search</string>

    // Drawer
    <string name="severity_level">Severity level</string>
    <string name="UNKNOWN_SEVERITY">Unknown severity</string>
    <string name="INFO">Info</string>
    <string name="WARNING">Warning</string>
    <string name="SEVERE">Severe</string>

    <string name="alert_effect">Alert effect</string>
    <string name="NO_SERVICE">No service</string>
    <string name="REDUCED_SERVICE">Reduced service</string>
    <string name="SIGNIFICANT_DELAYS">Significant delays</string>
    <string name="DETOUR">Detour</string>
    <string name="ADDITIONAL_SERVICE">Additional service</string>
    <string name="MODIFIED_SERVICE">Modified service</string>
    <string name="OTHER_EFFECT">Other effect</string>
    <string name="UNKNOWN_EFFECT">Unknown effect</string>
    <string name="STOP_MOVED">Stop moved</string>
    <string name="NO_EFFECT">No effect</string>

    <string name="alert_cause">Alert cause</string>
    <string name="UNKNOWN_CAUSE">Unknown cause</string>
    <string name="OTHER_CAUSE">Other cause</string>
    <string name="TECHNICAL_PROBLEM">Technical problem</string>
    <string name="STRIKE">Strike</string>
    <string name="DEMONSTRATION">Demonstration</string>
    <string name="ACCIDENT">Accident</string>
    <string name="HOLIDAY">Holiday</string>
    <string name="WEATHER">Weather</string>
    <string name="MAINTENANCE">Maintenance</string>
    <string name="CONSTRUCTION">Construction</string>
    <string name="POLICE_ACTIVITY">Police activity</string>
    <string name="MEDICAL_EMERGENCY">Medical emergency</string>
    <string name="menu_positions">Vehicles</string>
    <string name="menu_analytics">Analytics</string>
    <string name="alert_filtering_preferences">Alert filtering preferences</string>

    // Traffic Filters
    <string name="criticality_menu_item">Criticality</string>
    <string name="critical_menu_item">Critical</string>
    <string name="major_menu_item">Major</string>
    <string name="minor_menu_item">Minor</string>
    <string name="clear_radio_button_text">Clear radio</string>
    <string name="clear_all_button_text">Clear All</string>


    <string name="distance_menu_item">Distance (km)</string>
    <string name="minimum_distance_menu_item">Minimum distance</string>
    <string name="maximum_distance_menu_item">Maximum distance</string>

    <string name="type_menu_item">Traffic cause type</string>
    <string name="event_menu_item">Event</string>
    <string name="incident_menu_item">Incident</string>

    <string name="miscellaneous_menu_item">Miscellaneous</string>
    <string name="road_closed_menu_item">Road closed</string>
    <string name="response_vehicles_menu_item">Response vehicles</string>
    <string name="apply_button_menu_item">Apply</string>

    // AR
    <string name="user_location_permission_explanation" translatable="false">WIP</string>
    <string name="user_location_permission_not_granted">Location permission not granted</string>
    <string name="distance_hint">e.g. 10</string>
    <string name="CAUSE_MODIFIED_SERVICE">Modified service</string>
    <string name="late_vehicles_title">Vehicles</string>
    <string name="late_5_mins">Late more than 5 minutes</string>
    <string name="on_wrong_route">On wrong route</string>
    <string name="speeding">Vehicle is speeding</string>
    <string name="late_time">Set vehicle late time</string>
    <string name="vehicle_late_time_hint">Seconds late</string>
    <string name="show_trams">Show only trams</string>
    <string name="show_busses">Show only busses</string>
    <string name="show_metros">Show only metros</string>
    <string name="see_bus_lines_hint">Enter a line number</string>
    <string name="lines_search">See all vehicles on a line</string>
    <string name="ar_map_refresh_button_text">Refresh Map</string>
    <string name="bus_count">Active busses on map: %1$s</string>
    <string name="tram_count">Active trams on map: %1$s</string>
    <string name="vehicle_count">"Active vehicles on map: %1$s"</string>
    <string name="clear_map">Clear map</string>
    <string name="show_traffic_items">Show Traffic Info</string>
    <string name="traffic_info_title">HERE Maps Traffic Info</string>

    <string name="camera_and_location_permission_request">Location and Camera permissions are needed to use this
        feature
    </string>
    <string name="loading_message" >Loading current location.</string>
    <string name="arcore_not_supported" >This device does not support AR</string>
    <string name="arcore_not_installed">Please install ARCore</string>
    <string name="arcore_not_updated">Please update ARCore</string>
    <string name="analytics">Quering HSL API...</string>
    <string name="analytics_text_view">Query finished %1$s \nQuery elapsed %2$s milliseconds</string>
    <string name="analytics_chartmodel_title">Arrival times at stops</string>
    <string name="arrival_times_text">Arrival times</string>
    <string name="busses_text">Buses</string>
    <string name="trams_text">Trams</string>
    <string name="metros_text">Metros</string>
    <string name="show_metro">Show only metros</string>

</resources>