<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorOnPrimary"
    android:theme="@style/Theme.NokiaHslVisualisation"
    tools:context=".fragments.vehicles.VehicleFragment">

    <com.mapbox.mapboxsdk.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="260dp"
        android:layout_height="match_parent"
        android:layout_gravity="start|bottom"
        android:background="?attr/colorOnPrimary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/vehicle_problems"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:gravity="fill"
                android:text="@string/late_vehicles_title"
                android:textColor="?attr/colorOnSecondary"
                android:textSize="20sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="?attr/colorOnSecondary" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/late_5_mins"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:gravity="fill"
                android:text="@string/late_5_mins" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/on_wrong_route"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:gravity="fill"
                android:text="@string/on_wrong_route" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/speeding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="32dp"
                android:gravity="fill"
                android:text="@string/speeding" />

            <TextView
                android:id="@+id/late_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:gravity="fill"
                android:text="@string/late_time"
                android:textColor="?attr/colorOnSecondary"
                android:textSize="20sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="?attr/colorOnSecondary" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="280dp"
                android:layout_height="63dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:hint="@string/vehicle_late_time_hint"
                app:boxCornerRadiusBottomEnd="5dp"
                app:boxCornerRadiusBottomStart="5dp"
                app:boxCornerRadiusTopEnd="5dp"
                app:boxCornerRadiusTopStart="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_late_time"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textColor="@color/design_default_color_on_secondary"
                    android:textColorHint="@color/design_default_color_on_secondary"
                    tools:ignore="KeyboardInaccessibleWidget" />

            </com.google.android.material.textfield.TextInputLayout>

            <ProgressBar
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_weight="1" />

        </LinearLayout>
    </ScrollView>

</androidx.drawerlayout.widget.DrawerLayout>