<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/severity_level">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/UNKNOWN_SEVERITY"
                    android:title="@string/UNKNOWN_SEVERITY"
                    app:actionViewClass="android.widget.Switch" />

                <item
                    android:id="@+id/INFO"
                    android:title="@string/INFO"
                    app:actionViewClass="android.widget.Switch" />

                <item
                    android:id="@+id/WARNING"
                    android:title="@string/WARNING"
                    app:actionViewClass="android.widget.Switch" />

                <item
                    android:id="@+id/SEVERE"
                    android:title="@string/SEVERE"
                    app:actionViewClass="android.widget.Switch" />

            </group>
        </menu>
    </item>

<!--    <item android:title="@string/alert_cause">-->
<!--        <menu>-->
<!--            <group android:checkableBehavior="single">-->
<!--                <item-->
<!--                    android:id="@+id/NO_SERVICE"-->
<!--                    android:title="@string/NO_SERVICE"-->
<!--                    app:actionViewClass="android.widget.Switch" />-->
<!--                <item-->
<!--                    android:id="@+id/REDUCED_SERVICE"-->
<!--                    android:title="@string/REDUCED_SERVICE"-->
<!--                    app:actionViewClass="android.widget.Switch" />-->
<!--                <item-->
<!--                    android:id="@+id/SIGNIFICANT_DELAYS"-->
<!--                    android:title="@string/SIGNIFICANT_DELAYS"-->
<!--                    app:actionViewClass="android.widget.Switch"-->
<!--                    />-->
<!--                <item-->
<!--                    android:id="@+id/DETOUR"-->
<!--                    android:title="@string/DETOUR"-->
<!--                    app:actionViewClass="android.widget.Switch"-->
<!--                    />-->
<!--                <item-->
<!--                    android:id="@+id/ADDITIONAL_SERVICE"-->
<!--                    android:title="@string/ADDITIONAL_SERVICE"-->
<!--                    app:actionViewClass="android.widget.Switch"-->
<!--                    />-->
<!--                <item-->
<!--                    android:id="@+id/MODIFIED_SERVICE"-->
<!--                    android:title="@string/MODIFIED_SERVICE"-->
<!--                    app:actionViewClass="android.widget.Switch"-->
<!--                    />-->
<!--                <item-->
<!--                    android:id="@+id/OTHER_EFFECT"-->
<!--                    android:title="@string/OTHER_EFFECT"-->
<!--                    app:actionViewClass="android.widget.Switch"-->
<!--                    />-->
<!--                <item-->
<!--                    android:id="@+id/UNKNOWN_EFFECT"-->
<!--                    android:title="@string/UNKNOWN_EFFECT"-->
<!--                    app:actionViewClass="android.widget.Switch"-->
<!--                    />-->
<!--                <item-->
<!--                    android:id="@+id/STOP_MOVED"-->
<!--                    android:title="@string/STOP_MOVED"-->
<!--                    app:actionViewClass="android.widget.Switch"-->
<!--                    />-->
<!--                <item-->
<!--                    android:id="@+id/NO_EFFECT"-->
<!--                    android:title="@string/NO_EFFECT"-->
<!--                    app:actionViewClass="android.widget.Switch"-->
<!--                    />-->
<!--            </group>-->
<!--        </menu>-->
<!--    </item>-->

<!--    <item android:title="@string/alert_effect">-->
<!--        <menu>-->
<!--            <group android:checkableBehavior="single">-->
<!--                <item-->
<!--                    android:id="@+id/UNKNOWN_CAUSE"-->
<!--                    android:title="@string/UNKNOWN_CAUSE"-->
<!--                    app:actionViewClass="android.widget.Switch"-->
<!--                    />-->
<!--                <item-->
<!--                    android:id="@+id/OTHER_CAUSE"-->
<!--                    android:title="@string/OTHER_CAUSE"-->
<!--                    app:actionViewClass="android.widget.Switch"-->
<!--                    />-->
<!--                <item-->
<!--                    android:id="@+id/TECHNICAL_PROBLEM"-->
<!--                    android:title="@string/TECHNICAL_PROBLEM"-->
<!--                    app:actionViewClass="android.widget.Switch"-->
<!--                    />-->
<!--                <item-->
<!--                    android:id="@+id/STRIKE"-->
<!--                    android:title="@string/STRIKE"-->
<!--                    app:actionViewClass="android.widget.Switch"-->
<!--                    />-->
<!--                <item-->
<!--                    android:id="@+id/DEMONSTRATION"-->
<!--                    android:title="@string/DEMONSTRATION"-->
<!--                    app:actionViewClass="android.widget.Switch"-->
<!--                    />-->
<!--                <item-->
<!--                    android:id="@+id/ACCIDENT"-->
<!--                    android:title="@string/ACCIDENT"-->
<!--                    app:actionViewClass="android.widget.Switch"-->
<!--                    />-->
<!--                <item-->
<!--                    android:id="@+id/HOLIDAY"-->
<!--                    android:title="@string/HOLIDAY"-->
<!--                    app:actionViewClass="android.widget.Switch"-->
<!--                    />-->
<!--                <item-->
<!--                    android:id="@+id/WEATHER"-->
<!--                    android:title="@string/WEATHER"-->
<!--                    app:actionViewClass="android.widget.Switch"-->
<!--                    />-->
<!--                <item-->
<!--                    android:id="@+id/MAINTENANCE"-->
<!--                    android:title="@string/MAINTENANCE"-->
<!--                    app:actionViewClass="android.widget.Switch"-->
<!--                    />-->
<!--                <item-->
<!--                    android:id="@+id/CONSTRUCTION"-->
<!--                    android:title="@string/CONSTRUCTION"-->
<!--                    app:actionViewClass="android.widget.Switch"-->
<!--                    />-->
<!--                <item-->
<!--                    android:id="@+id/POLICE_ACTIVITY"-->
<!--                    android:title="@string/POLICE_ACTIVITY"-->
<!--                    app:actionViewClass="android.widget.Switch"-->
<!--                    />-->
<!--                <item-->
<!--                    android:id="@+id/MEDICAL_EMERGENCY"-->
<!--                    android:title="@string/MEDICAL_EMERGENCY"-->
<!--                    app:actionViewClass="android.widget.Switch"-->
<!--                    />-->
<!--            </group>-->
<!--        </menu>-->
<!--    </item>-->
</menu>